--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-    "dependencies": {
-        "@project-serum/anchor": "^0.21.0"
-    },
-    "devDependencies": {
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3",
-        "ts-mocha": "^8.0.0",
-        "@types/mocha": "^9.0.0",
-        "typescript": "^4.3.5"
-    }
+  "dependencies": {
+    "@project-serum/anchor": "^0.21.0",
+    "bs58": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/bs58": "^4.0.2",
+    "esbuild": "^0.19.3",
+    "esbuild-runner": "^2.2.2",
+    "prettier": "^3.0.3",
+    "typescript": "^4.3.5"
+  }
 }
